With db scripts